ags (3.6.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GStreamer support?

ags (3.5.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed tempo issue

ags (3.5.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audiorec_fast_export() current_buffer_size variable

ags (3.5.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed audio fast export

ags (3.5.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing $(docdir)/images/adwaita

ags (3.5.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to AgsRecall::done() in ags_fx_notation_audio_signal.c
	* fixed AgsFMSyncsynth missing restore of some fields

ags (3.5.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing Adwaita images in user's handbook

ags (3.5.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed pointer arithmetic type mismatch

ags (3.5.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]

ags (3.5.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented poppler PDF support of AgsOnlineHelpWindow
	* fixed typo in ags_quit_dialog.c
	* added pdf and install-pdf target to Makefile.am
	* minor improvements

ags (3.5.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsOnlineHelpWindow
	* implemented AgsQuitDialog

ags (3.4.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted some drawing operations in ags/widget/

ags (3.4.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed prototype of widgets overriding GtkWidget::draw(), missing gboolean return value

ags (3.4.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed issues encountered on Apple Mac OS X

ags (3.4.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]