@@ -2,6 +2,8 @@ ags (3.6.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented GStreamer support?
+	* implemented AgsComplex support in ags_fourier_transform_util.[ch]
+	* improved the developer's manual
 
 ags (3.5.9)
 
